[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]", "pin3x-jnrh2023"]

[project]
dependencies = ["pin3x-jnrh2023"]
description = "Set of robot URDFs for benchmarking and developed examples."
license = "BSD-3-Clause"
name = "example-robot-data-jnrh2023"
version = "4.0.7"

[project.urls]
homepage = "https://github.com/gepetto/example-robot-data"

[tool.cmeel]
build-number = 2025
pyver-any = true
run-tests = false

[tool.isort]
profile = "black"

[tool.tomlsort]
all = true
